# shuttlings-cch24

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  deny.toml  flake.nix  privkey.pem  pubkey.pem  rust-toolchain.toml
shuttle/: default.nix
src/: day_12.rs  day_16.rs  day_19.rs  day_2.rs  day_23.rs  day_5.rs  day_9.rs  day_minus_1.rs  main.rs
