[package]
name = "shuttlings-cch24"
description = "My solutions for the Shuttle Christmas Code Hunt 2024"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Linda Siemons <linda@catbrained.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
shuttle-axum = "0.49.0"
shuttle-runtime = { version = "0.49.0", default-features = false }
tokio = "1.28.2"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
cargo-manifest = "0.17.0"
serde_yaml = "0.9.34"
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
