[package]
name = "shuttlings-cch24"
description = "My solutions for the Shuttle Christmas Code Hunt 2024"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Linda Siemons <linda@catbrained.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = [ "multipart" ] }
shuttle-axum = "0.49.0"
shuttle-runtime = { version = "0.49.0", default-features = false }
tokio = { version = "1.28.2", features = [ "full" ] }
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
cargo-manifest = "0.17.0"
serde_yaml = "0.9.34"
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [ "env-filter" ] }
jsonwebtoken = "9.3.0"
leaky-bucket = "1.1.2"
rand = "0.8.5"
shuttle-shared-db = { version = "0.49.0", features = [ "postgres", "sqlx" ] }
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "tls-rustls-ring", "postgres", "uuid", "chrono" ] }
tower-http = { version = "0.6.2", features = [ "fs" ] }
